選ばれる理由、サービスの流れcss追加

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 
 
 
+
 <div class="duties">
     <div class="duties__title">業務案内</div>
     <div class="duties__items">
@@ -180,41 +181,39 @@
 
 
 
-
-
 <div class="gp">
     <div class="gp__title">選ばれる理由</div>
-    <ul>
+    <ul class="gp__items">
         <li class="gp__item">
-            <div class="gp__box">
+            <div class="gp__box-a">
             <div class="gp__item-title">専門家がお悩みをサポート</div>
-            <div class="gp__contents">内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。</div>
-            </div>
-            <div class="gp__img"><img src="/" alt="">
+            <div class="gp__contents">内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。</div>
+            </div><!--gp__box-->
+            <div class="gp__img-1"><img src="img/14632-min.png" alt="">
             </div>
         </li>
         <li class="gp__item">
             <div class="gp__box">
-            <div class="gp__item-title">書類集め・申請書作成など手続きを代行</div>
-            <div class="gp__contents">内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。</div>
+            <div class="gp__item-title">書類集め<br>・<br>申請書作成など手続きを代行</div>
+            <div class="gp__contents">内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。</div>
             </div>
-            <div class="gp__img"><img src="/" alt="">
+            <div class="gp__img-2"><img src="img/1498-min.png" alt="">
             </div>
         </li>
         <li class="gp__item">
             <div class="gp__box">
             <div class="gp__item-title">安心の料金設定</div>
-            <div class="gp__contents">内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。</div>
+            <div class="gp__contents">内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。</div>
             </div>
-            <div class="gp__img"><img src="/" alt="">
+            <div class="gp__img-3"><img src="img/8205-min.png" alt="">
             </div>
         </li>
         <li class="gp__item">
             <div class="gp__box">
             <div class="gp__item-title">リモート対応</div>
-            <div class="gp__contents">内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。</div>
+            <div class="gp__contents">内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。</div>
             </div>
-            <div class="gp__img"><img src="/" alt="">
+            <div class="gp__img-4"><img src="img/12567-min.png" alt="">
             </div>
         </li>
     </ul>
@@ -224,33 +223,33 @@
 
 <div class="flow">
     <div class="flow__box"><!--縦書き-->
-        <ul>
+        <div class="flow__title">サービスの流れ</div>
+        <ul class="flow__items">
             <li class="flow__item">
-                <div class="flow__title">まずはお問い合わせ下さい</div>
+                <div class="flow__item-title">まずはお問い合わせ下さい</div>
                 <div class="flow__text">内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。</div>
-                <div class="flow__tel">TEL</div><div class="flow__tel-number">23-456-7891</div>
-                <div class="flow__mail"><a href="/">メールでお問い合わせ</a></div>
-                <div class="flow__arrow"><img src="/" alt=""></div>
+                <div class="flow__tel"><i class="fa-solid fa-phone flow__tel-icon"></i>お電話<span class="flow__tel-number">23&nbsp;456&nbsp;7891</span></div>
+                <div class="flow__mail"><a class="flow__mail-a" href="/"><i class="fa-regular fa-envelope"></i>メールでお問い合わせ</a></div>
+                <div class="flow__arrow"><i class="fa-solid fa-caret-left"></i></div>
             </li>
             <li class="flow__item">
-                <div class="flow__title">手数料のお振込をお願いいたします</div>
+                <div class="flow__item-title">手数料のお振込をお願いいたします</div>
                 <div class="flow__text">内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。</div>
-                <div class="flow__arrow"><img src="/" alt=""></div>
+                <div class="flow__arrow"><i class="fa-solid fa-caret-left"></i></div>
             </li>
             <li class="flow__item">
-                <div class="flow__title">各種書類を作成いたします</div>
+                <div class="flow__item-title">各種書類を作成いたします</div>
                 <div class="flow__text">内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。</div>
-                <div class="flow__arrow"><img src="/" alt=""></div>
+                <div class="flow__arrow"><i class="fa-solid fa-caret-left"></i></div>
             </li>
             <li class="flow__item">
-                <div class="flow__title">管轄の入国管理局にて申請を行います</div>
+                <div class="flow__item-title">管轄の入国管理局にて申請を行います</div>
                 <div class="flow__text">内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。</div>
-                <div class="flow__arrow"><img src="/" alt=""></div>
+                <div class="flow__arrow"><i class="fa-solid fa-caret-left"></i></div>
             </li>
             <li class="flow__item">
-                <div class="flow__title">新しい在留カード等をご希望の方法によりお渡しいたします</div>
+                <div class="flow__item-title">新しい在留カード等をご希望の方法によりお渡しいたします</div>
                 <div class="flow__text">内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。内容が入ります。</div>
-                <div class="flow__arrow"><img src="/" alt=""></div>
             </li>
         </ul>
     </div>
