フッター　css追加

--- a/index.html
+++ b/index.html
@@ -113,7 +113,9 @@
 
 
 
-<div class="box main-inner">コンテンツ入ります</div>
+<div class="advantages inner">
+    .advantages__
+</div>
 </div>
 
 
@@ -216,7 +218,7 @@
   </div>
 </section>-->
 
-<section class="side-scroll section">
+<section class="side-scroll section inner">
   <div class="side-scroll-container container">
     <!--<h2 class="side-scroll-heading heading">
       横にスクロールするセクション
@@ -317,7 +319,7 @@
 
 
 
-<div class="gp">
+<div class="gp inner">
     <div class="gp__title">選ばれる理由</div>
     <ul class="gp__items">
         <li class="gp__item">
@@ -357,7 +359,7 @@
 
 
 
-<div class="flow">
+<div class="flow inner">
     <div class="flow__box"><!--縦書き-->
         <div class="flow__filter">
         <div class="flow__title">サービスの流れ</div>
@@ -423,7 +425,7 @@
 
 
 
-        <div class="representative">
+        <div class="representative inner">
             <div class="representative__title">
                 <p>ごあいさつ</p>
             </div>
@@ -441,8 +443,8 @@
 
 
 
-        <div class="access">
-                <div class="access__titlle">アクセス</div>
+        <div class="access inner">
+                <div class="access__title">アクセス</div>
                 <div class="access__box">
                     <div class="access__left">
                     <div class="access__map">
@@ -489,7 +491,8 @@
 
 
         <footer>
-            <div class="footer__logo">ロゴ</div>
+            <div class="footer__box inner">
+            <div class="footer__logo">logo</div>
 
             <div class="footer__nav">
                 <ul class="footer__nav-items">
@@ -502,12 +505,16 @@
                     <li class="footer__nav-list">コンタクト</li>
                 </ul>
             </div>
+        </div><!--footer__box-->
+
+            <div class="footer__copyright">
+                <small>
+                    Copyright©2023  〇〇〇〇行政書士事務所 All Rights Reserved.
+                </small>
+            </div>
+     
         </footer>
-        <div class="copyright">
-    <small>
-        Copyright©2023  〇〇〇〇行政書士事務所 All Rights Reserved.
-    </small>
-        </div>
+
 
 
 
